--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"build": "ncc build src/main.js --out dist --minify --license licence.txt"
 	},
 	"dependencies": {
-		"@actions/core": "^1.5.0"
+		"@actions/core": "^1.5.0",
+		"@actions/exec": "^1.1.0"
 	},
 	"devDependencies": {
 		"@vercel/ncc": "^0.31.0"
