--- a/action.yaml
+++ b/action.yaml
@@ -2,6 +2,10 @@ name: 'Free Pascal Compiler'
 description: 'Compile Pascal code using FPC'
 author: 'suve'
 inputs:
+  fpc:
+    name: 'Full path to fpc executable'
+    required: false
+    default: ''
   source:
     name: 'Main source file to be compiled'
     required: true
