--- a/action.yaml
+++ b/action.yaml
@@ -11,8 +11,12 @@ inputs:
     required: false
     default: ''
   source:
-    name: 'Main source file to be compiled'
+    name: 'Main source file to compile'
     required: true
+  workdir:
+    name: 'Working directory to use'
+    required: false
+    default: ''
 runs:
   using: 'node12'
   main: 'dist/index.js'
