--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	},
 	"dependencies": {
 		"@actions/core": "^1.6.0",
-		"@actions/exec": "^1.1.0"
+		"@actions/exec": "^1.1.0",
+		"semver": "^7.3.5"
 	},
 	"devDependencies": {
 		"@vercel/ncc": "^0.31.0"
